--- a/README
+++ b/README
@@ -2,4 +2,5 @@ Skins for Qmmp (Qt-based Multimedia Player)
 -------------------------------------------
 
     1. Sodium v.0.2.0
+    2. Sparrow v.0.0.1
     
